# -ocaml_aoc2024-

./: .ocamlformat  LICENSE  dune-project  ocaml_aoc2024.opam
lib/: dune
test/: dune
