(lang dune 3.17)

(name ocaml_aoc2024)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Christophe Roux gloppasglop@gmail.com")

(maintainers "Christophe Roux gloppasglop@gmail.com")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocaml_aoc2024)
 (synopsis "AOC 2024")
 (description "AOC 2024")
 (depends ocaml)
 (tags ("aoc_2024")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
